compiler/testData/diagnostics/tests/classObjects/classObjectInLocalClass.kt
fun test() {
    class A {
        <!CLASS_OBJECT_NOT_ALLOWED!>class object {}<!>
    }

    object {
        <!CLASS_OBJECT_NOT_ALLOWED!>class object {}<!>
    }
}